WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205245
[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/overflow-wrap/overflow-wrap-break-word-006.html
https://bugs.webkit.org/show_bug.cgi?id=205245
Summary
[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/overflow-wrap/ove...
alan
Reported
2019-12-14 21:29:44 PST
ssia
Attachments
Patch
(9.23 KB, patch)
2019-12-14 21:45 PST
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-14 21:30:15 PST
<
rdar://problem/57943885
>
alan
Comment 2
2019-12-14 21:45:36 PST
Created
attachment 385708
[details]
Patch
Antti Koivisto
Comment 3
2019-12-15 00:03:24 PST
Comment on
attachment 385708
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=385708&action=review
> Source/WebCore/layout/inlineformatting/InlineLineBreaker.cpp:109 > + if (auto partialTrailingContent = wrapTextContent(runs, lineStatus)) {
Here the returned variable is called "content".
> Source/WebCore/layout/inlineformatting/InlineLineBreaker.h:125 > + struct TextWrappingContext { > + unsigned trailingRunIndex { 0 }; > + bool contentOverflows { false }; > + Optional<PartialRun> partialTrailingRun; > + }; > + Optional<TextWrappingContext> wrapTextContent(const Content::RunList&, const LineStatus&) const;
Not sure I understand how this type is a "context". context noun 1 the historical context out of which the novel arose: circumstances, conditions, surroundings, factors, state of affairs; situation, environment, milieu, setting, background, backdrop, scene; climate, atmosphere, ambience, mood, feel. It is also confusing that it is returned by function called "content". Based on your variable naming above, maybe the type should be "PartialTrailingContent"? Or based on the function naming "WrappedTextContent"? In this case you might want to rename the variables too.
alan
Comment 4
2019-12-15 05:50:08 PST
Committed
r253533
: <
https://trac.webkit.org/changeset/253533
>
alan
Comment 5
2019-12-15 05:51:18 PST
(In reply to zalan from
comment #4
)
> Committed
r253533
: <
https://trac.webkit.org/changeset/253533
>
Oh no, I didn't mean to land it without the renaming :(
alan
Comment 6
2019-12-15 06:03:20 PST
(In reply to zalan from
comment #5
)
> (In reply to zalan from
comment #4
) > > Committed
r253533
: <
https://trac.webkit.org/changeset/253533
> > > Oh no, I didn't mean to land it without the renaming :(
Addressed in
r253534
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug