[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/overflow-wrap/overflow-wrap-break-word-006.html https://bugs.webkit.org/show_bug.cgi?id=205245 <rdar://problem/57943885>

Reviewed by Antti Koivisto.

Line breaking should be able to differentiate
1. the case when the candidate content's first character does not fit the line
2. and when the candidate content has multiple runs and
  (a) the overflow run is not the first one
  (b) it can't be wrapped and we fall back to the first run in the list
In both cases wordBreakingBehavior returns { 0, { } }, where 0 is the trailing run index (first run) and the nullopt indicates
that there's no partial content.

Introduce TextWrappingContext to be able to tell these cases apart.

* layout/inlineformatting/InlineLineBreaker.cpp:
(WebCore::Layout::LineBreaker::breakingContextForInlineContent):
(WebCore::Layout::LineBreaker::wrapTextContent const):
(WebCore::Layout::LineBreaker::tryBreakingTextRun const):
(WebCore::Layout::LineBreaker::wordBreakingBehavior const): Deleted.
* layout/inlineformatting/InlineLineBreaker.h:

Canonical link: https://commits.webkit.org/218449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253533 268f45cc-cd09-0410-ab3c-d52691b4dbfc